--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
           <section class="about-text">
             <p>
-              As a Computer Science and Engineering student at the esteemed
+              As a Electrical Engineering student at the esteemed
               National Institute of Technology Durgapur, I have a unique knack
               for learning quickly through analogies. I specialize in innovative
               web and mobile development, transforming complex problems into
@@ -193,7 +193,7 @@
               mentor, I am dedicated to fostering a collaborative tech
               community. My mission is to leverage my quick learning ability and
               creative problem-solving skills to develop transformative software
-              solutions. This is S Sankeerth Reddy for you!
+              solutions. This is U Sukesh Reddy for you!
             </p>
           </section>
           <!--
@@ -375,10 +375,10 @@
           - testimonials modal
         -->
 
-          <div class="modal-container" data-modal-container>
+<!--           <div class="modal-container" data-modal-container>
             <div class="overlay" data-overlay></div>
 
-            <section class="testimonials-modal">
+<!--             <section class="testimonials-modal">
               <button class="modal-close-btn" data-modal-close-btn>
                 <ion-icon name="close-outline"></ion-icon>
               </button>
@@ -409,9 +409,9 @@
                   </p>
                 </div>
               </div>
-            </section>
+            </section> -->
             -->
-          </div>
+          </div> -->
 
           <!--
           - clients
@@ -487,7 +487,7 @@
                   B.Tech - Electrical Engineering
                 </h4>
                 <span>National Institute of Technology, Durgapur</span>
-                <p class="timeline-text">CGPA: 7.49</p>
+                <p class="timeline-text">CGPA: 7.36</p>
               </li>
 
               <li class="timeline-item">
